--- a/PacNicYT.html
+++ b/PacNicYT.html
@@ -17,7 +17,7 @@ alert ('Selamat datang di beranda Pac Nic, hanya untuk bersenang-senang sejak 20
         <div class="inner_header">
              <div class="logo_container">                
                 <h1><img src="https://yt3.ggpht.com/a-/AAuE7mAoCNe3I5DqX7aptUhnGNq2pGoT99_wDDTgsOeeyg=s288-c-k-c0xffffffff-no-rj-mo" height="50" width="50"></h1>
-                <h2>PAC NIC</h2>
+                <p>PAC NIC</p>
             </div>
 
             <ul class="navigation">
