--- a/PacNicYT.html
+++ b/PacNicYT.html
@@ -13,12 +13,12 @@ alert ('Selamat datang di beranda Pac Nic, hanya untuk bersenang-senang sejak 20
 </head>
 
 <body>
-    <div class="header">
-        <div class="inner_header">
+    <div id="PacNicHeader">
+        <header>
              <div class="logo_container">                
-                <h1><img src="https://yt3.ggpht.com/a-/AAuE7mAoCNe3I5DqX7aptUhnGNq2pGoT99_wDDTgsOeeyg=s288-c-k-c0xffffffff-no-rj-mo" height="50" width="50"></h1>
-                <p>PAC NIC</p>
-            </div>
+             <img id="Logo" src="https://yt3.ggpht.com/a-/AAuE7mAoCNe3I5DqX7aptUhnGNq2pGoT99_wDDTgsOeeyg=s288-c-k-c0xffffffff-no-rj-mo" height="50" width="50"/>
+             <h1>PAC NIC</h1>
+        </header>
 
             <ul class="navigation">
                 <a><li>Toko</li></a>
