--- a/PacNicYT.html
+++ b/PacNicYT.html
@@ -16,17 +16,19 @@ alert ('Selamat datang di beranda Pac Nic, hanya untuk bersenang-senang sejak 20
     <div id="PacNicHeader">
         <header>
              <div class="logo_container">                
-             <img id="Logo" src="https://yt3.ggpht.com/a-/AAuE7mAoCNe3I5DqX7aptUhnGNq2pGoT99_wDDTgsOeeyg=s288-c-k-c0xffffffff-no-rj-mo" height="50" width="50" <h1>PAC NIC</h1>/>
-             <p>PAC NIC</p>
+             <img id="Logo" src="https://yt3.ggpht.com/a-/AAuE7mAoCNe3I5DqX7aptUhnGNq2pGoT99_wDDTgsOeeyg=s288-c-k-c0xffffffff-no-rj-mo" height="50" width="50" />
+                </div>
+            <div id='logo-text'>
+                <h1>PAC NIC</h1>
+                    </div>    
         </header>
-
             <ul class="navigation">
                 <a><li>Toko</li></a>
                 <a><li>Tentang</li></a>
                 <a href="Video.html"><li>Video</li></a>
                 <a href="Contact.html"><li>Kontak</li></a>
             </ul>
-        </div>
+        
     </div>
 
     <p style= "font-family: calibri" >
