--- a/PacNicYT.html
+++ b/PacNicYT.html
@@ -18,7 +18,7 @@ alert ('Selamat datang di beranda Pac Nic, hanya untuk bersenang-senang sejak 20
              <div class="logo_container">                
              <img id="Logo" src="https://yt3.ggpht.com/a-/AAuE7mAoCNe3I5DqX7aptUhnGNq2pGoT99_wDDTgsOeeyg=s288-c-k-c0xffffffff-no-rj-mo" height="50" width="50" />
                 </div>
-            <div id='logo-text'>
+            <div class='logo-text'>
                 <h1>PAC NIC</h1>
                     </div>    
         </header>
